# HARE

./: .gitignore  DEADJOE  HAREsetupScript.sh  README.md  batnet_setup.txt  temp.py  test.txt
Report/: main.out  main.tex
batman/: batman_readme.txt  setupBatman.sh  setupBatman_gene_surface.sh  setupBatman_james.sh  setupBatman_odroid.sh  startBatman.sh  startBatman_gene_surface.sh  startBatman_james.sh  startBatman_odroid.sh
batman/MikeF_bat/: setupBatman.sh
src/depth/: CMakeLists.txt  package.xml
src/depth-image/rs-depth-image/: CMakeLists.txt  rs-depth-image.cpp
src/depth-image/rs-depth-image/old/: rs-depth-image_backup.cpp
src/depth-image/rs-imshow/: CMakeLists.txt
src/depth/launch/: rs.launch
src/depth/src/: depth.cpp
src/hallFSM/: hallway_FSM.py  segment_RANSAC.ipynb
src/hallFSM/marchhare/: PolyWorldApp.py  Vector.py
src/hallFSM/marchhare/VectorMath/: Vector2D.py
src/image_pipeline/image_proc/: CMakeLists.txt
src/image_pipeline/image_proc/cfg/: Scan.cfg  StopSign.cfg
src/image_pipeline/image_proc/launch/: stopsign.launch
src/image_pipeline/image_proc/src/nodelets/: scan.cpp  stopsign.cpp
src/mitcar/: params.yaml
src/mitcar/include/racecar_simulator/: scan_simulator_2d.hpp
src/mitcar/launch/: simulate.launch
src/mitcar/maps/: ECCR_basement_map_v2.yaml  ECCR_basement_map_v2_w_pallets.yaml  hall_w_doors.xcf  hall_w_doors.yaml
src/mitcar/msg/: CtrlEffort.msg
src/mitcar/node/: joy_ctrl.cpp  simulate.cpp
src/mitcar/scripts/: drive_FSM.py  pygame_ctrl_demo.py  scan_visualizer.py
src/mitcar/src/: scan_simulator_2d.cpp
src/plan_ctrl/: CMakeLists.txt  config.yaml  package.xml  rs_array_filter.cpp  scratch.py
src/plan_ctrl/cpp_helpers/: Cpp_Helpers.cpp  Cpp_Helpers.h  ROS_Helpers.cpp  ROS_Helpers.h
src/plan_ctrl/msg/: CarState.msg
src/plan_ctrl/scripts/: WFI.py  reset_pololu_err_buf.py  rospy_helpers.py  scratch.py  simple_PID_on_wall.py
src/python_wall_follow_demo/: pygame_PID_wall_follow.py
src/realsense/realsense2_camera/launch/: rs_camera.launch  rs_rgbd.launch
src/realsense_depth/: CMakeLists.txt  package.xml
src/realsense_depth/include/realsense_depth/: realsense_depth.h
src/realsense_depth/launch/: rs.launch
src/realsense_depth/src/: realsense_depth.cpp
src/ros_pololu_servo/: CMakeLists.txt
src/ros_pololu_servo/launch/: HARE_control.launch  hare_ctrl_cfg.yaml  pololu_motors.yaml
src/ros_pololu_servo/msg/: HARECommand.msg
src/ros_pololu_servo/scripts/: HARE_command.py  HARE_keyboard_control.py
src/ros_pololu_servo/src/ros_pololu_servo/: PololuController.cpp
src/rs_custom_wrapper/: CMakeLists.txt
src/rs_custom_wrapper/launch/: hare_full.launch  hare_rs_config.xml  rs.launch
src/rs_custom_wrapper/src/: color_rs_wrapper.cpp  rs_custom_wrapper.cpp
src/teleop_twist_keyboard/: package.xml
src/teleop_twist_keyboard/launch/: hare_teleop.launch
src/teleop_twist_keyboard/scripts/: hare_keyboard_control.py
viz/: MIT_car.rviz
